2008-02-07  Akira TAGOH  <akira@tagoh.org>

	* mew-ical.el (mew-ical-mime-text/calendar): Add a support for CANCEL method.

