@@ -227,17 +227,24 @@
 	  (set-buffer cache)
 	  (mew-flet
 	   (write-region begin end rfile nil 'no-msg)))
-	(mew-ical-send-ical oalist
-			    summary
-			    status
-			    rfile
-			    afile
-			    need-reply
-			    (if (and mew-ical-user mew-ical-pass)
-				`("--anyauth"
-				  "--user"
-				  ,(concat mew-ical-user ":" mew-ical-pass))
-			      nil))
+	;; register ical to diary first.
+	(unless diary-file
+	  (setq diary-file
+		(read-file-name "Add appointment to this diary file: ")))
+	(icalendar-import-file rfile diary-file)
+	(if (and (stringp mew-ical-server-uri)
+		 (stringp mew-ical-user))
+	    (mew-ical-send-ical oalist
+				summary
+				status
+				rfile
+				afile
+				need-reply
+				(if (and mew-ical-user mew-ical-pass)
+				    `("--anyauth"
+				      "--user"
+				      ,(concat mew-ical-user ":" mew-ical-pass))
+				  nil)))
 	))))
 
 (defun mew-ical-button-handler-open-calendar (button)
